tests/fail/invalid_frequency.stderr
error: `frequency` should be less than 11025 for rate of 44100 Hz
 --> tests/fail/invalid_frequency.rs:9:39
  |
9 |     let _wave = sine_wave!(frequency: 20000);
  |                                       ^^^^^
